# legal-adviser

./: .devdbrc  .dockerignore  .eslintignore  .eslintrc.json  .gitignore  .npmrc  .prettierignore  README.md  backlog-plan.json  commitlint.config.js  docker-compose.infra.yml  docker-compose.override.yml  docker-compose.temporal.yml  docker-compose.yml  lint-staged.config.cjs  package.json  pnpm-lock.yaml  turbo.json
.agent/rules/: copilot-instructions.md
.automaker/: FEATURE-RESTRUCTURE-PROPOSAL.md  active-branches.json  app_spec.txt  backlog-plan.json  categories.json  execution-state.json  notifications.json  project-analysis.md  validate-feature-agent.md
.automaker/events/: evt-1768981084203-bfb16603.json  evt-1768981317586-a9a17f92.json  evt-1768981325228-7721ec76.json  evt-1768981348906-148e1962.json  evt-1768981870788-33aba367.json  evt-1768981983061-385d64c1.json  evt-1768982267719-44ee4312.json  evt-1768982443471-e3078db4.json  evt-1768983412109-3dfa4336.json  evt-1768984056062-9f9370de.json  evt-1769034708685-13560596.json  evt-1769035186721-1130d6d5.json  evt-1769035687904-24b4b02c.json  evt-1769035901441-cd632128.json  evt-1769036143367-9b1152c4.json  evt-1769036169482-9103da06.json  evt-1769036284376-0ac521b3.json  evt-1769036291921-d81bb53d.json  evt-1769036360311-2c22e332.json  evt-1769036397772-00d954e1.json  evt-1769036582110-d6954286.json  evt-1769036615986-9aed32aa.json  evt-1769036757339-be19a114.json  evt-1769036840557-23eb88b7.json  evt-1769037183702-59b3f987.json  evt-1769037305168-8a34a22e.json  evt-1769037357204-0caae263.json  evt-1769037426995-88294b15.json  evt-1769037527759-0d31da13.json  evt-1769037722480-78ff1490.json  evt-1769037801154-dff36953.json  evt-1769037924423-768220de.json  evt-1769037975606-76f3fc22.json  evt-1769038137304-88996d65.json  evt-1769038228033-5b02b1c7.json  evt-1769038413326-612ae05f.json  evt-1769038541950-447ae855.json  evt-1769038668704-73ef91b8.json  evt-1769038734302-30b9234c.json  evt-1769038776678-de261693.json  (+1022 more)
.automaker/features/about-how-it-works-page/: agent-output.md  feature.json  feature.json.bak1  feature.json.bak2
.automaker/features/about-page-content-strategy/: agent-output.md  feature.json  feature.json.bak1  feature.json.bak2  feature.json.bak3
.automaker/features/add-admin-filter-e2e-tests/: agent-output.md  feature.json  feature.json.bak1  feature.json.bak2  feature.json.bak3
.automaker/features/add-admin-settings-e2e-test/: agent-output.md  feature.json  feature.json.bak1  feature.json.bak2  (+1 more)
.automaker/memory/: _index.md  api.md  architecture.md  auth.md  authentication.md  database.md  gotcha.md  gotchas.md  internationalization.md  performance.md  security.md  testing.md  ui.md  validation.md
.claude/: CLAUDE.md  settings.json
.claude/skills/: testing.json
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
.speckit/: rbac-authorization.md  refine-graphql-mutations.md
apps/ai-engine/: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  openapi.json  package.json  pyproject.toml
apps/ai-engine/src/: __init__.py  config.py  dev.py  dev_server.py  error_handling.py  exceptions.py  export_openapi.py  inspect_pydantic_ai.py  langfuse_init.py  langfuse_middleware.py  main.py  sentry_init.py  start.py  start_server.py  validate_config.py
apps/ai-engine/src/agents/: clarification_agent.py  classifier_agent.py  dependencies.py  drafting_agent.py  qa_agent.py  rag_tool.py  title_agent.py
apps/ai-engine/src/auth/: __init__.py  jwt.py
apps/ai-engine/src/graphs/: drafting_graph.py  qa_graph.py
apps/ai-engine/src/models/: __init__.py  dto.py  requests.py  responses.py
apps/ai-engine/src/services/: __init__.py  cache_service.py  cost_monitoring.py  embedding_service.py  langfuse_tracker.py  metrics.py  model_selection.py  parallel_execution.py  streaming.py  streaming_enhanced.py
apps/ai-engine/src/workflows/: __init__.py  case_analysis_workflow.py  complex_qa_workflow.py  document_generation_workflow.py  optimized_case_analysis.py  orchestration.py  states.py
apps/ai-engine/tests/: conftest.py  test_classifier_unit.py  test_qa_graph_unit.py
apps/ai-engine/tests/e2e/: __init__.py  test_api_e2e.py
apps/ai-engine/tests/integration/: __init__.py  test_langfuse_tracing.py
apps/ai-engine/tests/unit/: test_config_agent.py  test_workflows.py
apps/backend/: .env.example  Dockerfile  eslint.config.mjs  jest.config.js  package-lock.json  package.json  playwright.config.ts  query-analysis.md  temporal-config.yml  tsconfig.json
apps/web/: .env.example  .eslintrc.json  Dockerfile  codegen.yml  components.json  jest.config.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.js  test-lint.ts
docs/: APM_MONITORING.md  BULL_TO_TEMPORAL_MIGRATION.md  DEV_SERVICE_STARTUP.md  DOCKER_SETUP.md  RBAC.md  SENTRY_SETUP.md  TEMPORAL_DEPLOYMENT.md  logging.md
docs/disaster-recovery/: DATA_INTEGRITY_VERIFICATION.md  DISASTER_RECOVERY_PLAN.md  IMPLEMENTATION_SUMMARY.md  README.md
scripts/: dev-shutdown.sh  dev-startup.sh  init-pgvector.sql
scripts/disaster-recovery/: restore-database.sh  service-failover.sh  verify-backup.sh
specs/001-legal-platform-init/: spec.md
specs/002-legal-ai-core/: T009-implementation.md  T010-implementation.md  T015-implementation.md  T018-implementation.md  T018-test-guide.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+3469 files in other folders)
