[project]
name = "ai-engine"
version = "0.1.0"
description = "AI Engine for Legal Platform"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-ai",
    "langgraph",
    "langchain",
    "openai",
    "python-dotenv",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
dev = "uvicorn src.main:app --reload --port 8000"
start = "uvicorn src.main:app --host 0.0.0.0 --port 8000"
export-openapi = "python src/export_openapi.py"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
