[project]
name = "ai-engine"
version = "0.1.0"
description = "AI Engine for Legal Platform"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-ai",
    "langgraph",
    "langchain",
    "openai",
    "python-dotenv",
    "pydantic-settings",
    "sentry-sdk>=2.50.0",
    "psutil",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
dev = "python src/dev_server.py"
start = "python src/start_server.py"
export-openapi = "python src/export_openapi.py"
lint = "ruff check ."
lint-fix = "ruff check --fix ."
format = "ruff format ."
format-check = "ruff format --check ."
typecheck = "mypy src/"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "mypy",
    "types-requests",
    "types-psutil",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    # pycodestyle (E, W)
    "E",
    "W",
    # Pyflakes (F)
    "F",
    # isort (I)
    "I",
    # pyupgrade (UP)
    "UP",
    # flake8-bugbear (B)
    "B",
    # flake8-comprehensions (C4)
    "C4",
    # flake8-simplify (SIM)
    "SIM",
    # flake8-unused-arguments (ARG)
    "ARG",
    # flake8-use-pathlib (PTH)
    "PTH",
    # flake8-raise (RSE)
    "RSE",
    # flake8-return (RET)
    "RET",
    # flake8-bandit (S) - security
    "S",
    # flake8-logging-format (G)
    "G",
    # flake8-future-annotations (FA)
    "FA",
    # flake8-pytest-style (PT)
    "PT",
    # performance optimizations (PERF)
    "PERF",
    # flynt (FLY)
    "FLY",
    # tryceratops (TRY)
    "TRY",
    # ruff-specific rules (RUF)
    "RUF",
]

ignore = [
    # Too many arguments to function call
    "PLR0913",
    # Too many branches
    "PLR0912",
    # Too many statements
    "PLR0915",
    # Too many return statements
    "PLR0911",
    # Too many local variables
    "PLR0914",
    # Complex if expressions
    "SIM108",
    # Cryptographic bandit checks - allow for development
    "S101",  # Use of assert detected
    "S102",  # Use of exec detected
    "S104",  # Binding to all network interfaces
    "S105",  # Hardcoded password
    "S106",  # Hardcoded password in argument
    "S107",  # Hardcoded password in default
    "S113",  # Probable use of requests without timeout
    "S311",  # Standard pseudo-random generators
    "S501",  # Use of insecure SSL
    "S608",  # SQL injection
    # Allow try/except for control flow
    "TRY003",
    "TRY300",
    # Allow long type annotations (formatter handles line length)
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # Allow assert in tests
    "ARG",    # Allow unused arguments in test fixtures
    "PLR2004",# Allow magic values in tests
    "RUF012", # Allow mutable class attributes in tests
]
"__init__.py" = [
    "F401",   # Unused imports
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-dummy-args = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
